2016-03-05 Thomas Orgis <sobukus@sourcemage.org>
	* DETAILS: remove stray quote that broke things

2012-12-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
	* DETAILS: corrected WEB_SITE

2010-11-03 Ladislav Hagara <hgr@vabo.cz>
	* DEPENDS: jpeg -> JPEG

2008-03-18 Eric Sandall <sandalle@sourcemage.org>
	* DEPENDS: Switch X11-SERVER to the one and only xorg-server

2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
	* DETAILS: [automated] Removed UPDATED.

2006-06-10 Flavien Bridault <vlaaad@sourcemage.org>
	* libpng.patch: fix bug #12037, thanks Arwed :-)
	* PRE_BUILD: added, apply patch
	* DEPENDS: corrected enabling/disabling of internal libgd

2006-04-25 Flavien Bridault <vlaaad@sourcemage.org>
	* DEPENDS: added, all dependencies were missing (bug #11472)
	* CONFIGURE: added to prompt about XML support
	* BUILD: added to be able to disable XML support
	* DETAILS: removed obsolete MAINTAINER

2006-03-12 Karsten Behrmann <BearPerson@sourcemage.org>
	* DETAILS: (automated) Add KEYWORDS

2005-10-20 Sergey Lipnevich <sergey@sourcemage.org>
	* DETAILS: upgrade to 0.2.8.4.

2004-05-08 Treeve Jelbert <treeve@sourcemage.org?>
	* DETAILS: version 0.2.8.3

2004-01-14 Treeve Jelbert <treeve@sourcemage.org?>
	* DETAILS: version 0.2.8.2
	  new WEB_SITE
	  this is needed by latest ImageMagick
	* HISTORY: reformatted

2003-09-03 hgg <hgreig@bigpond.net.au>
	* DETAILS: SOURCE_URL update to $SOURCEFORGE_URL

2003-05-29 M.L. <mlubrano@sourcemage.org>
	* DETAILS: Version++ (0.2.8).

2002-10-22 Eric Schabell <eschabell@sourcemage.org>
	* GCC2: removed

2002-05-09 Joel Mayes <bluebird@optushome.com.au>
	* Initial spell creation
