@@ -1,8 +1,3 @@
-default_pre_build      &&
-cd  $SOURCE_DIRECTORY  &&
-patch -p0 < $SCRIPT_DIRECTORY/png_header_fix.patch &&
-# libpng-1.5 fix from https://raw.githubusercontent.com/KaOSx/main/master/libwmf/libwmf-0.2.8.4-libpng-1.5.patch.gz
-patch -p1 <<'EOT'
 diff -urN libwmf-0.2.8.4.old/src/ipa/ipa/bmp.h libwmf-0.2.8.4/src/ipa/ipa/bmp.h
 --- libwmf-0.2.8.4.old/src/ipa/ipa/bmp.h	2011-05-23 19:14:23.000000000 +0200
 +++ libwmf-0.2.8.4/src/ipa/ipa/bmp.h	2011-05-23 19:15:11.000000000 +0200
@@ -15,4 +10,3 @@ diff -urN libwmf-0.2.8.4.old/src/ipa/ipa/bmp.h libwmf-0.2.8.4/src/ipa/ipa/bmp.h
  	{	WMF_DEBUG (API,"Failed to write bitmap as PNG! (setjmp failed)");
  		png_destroy_write_struct (&png_ptr,&info_ptr);
  		wmf_free (API,buffer);
-EOT
