@@ -1,5 +1,6 @@
-2016-03-05 Thomas Orgis <sobukus@sourcemage.org>
+2016-03-06 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: remove stray quote that broke things
+	* PRE_BUILD: another PNG patch to fix build
 
 2012-12-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: corrected WEB_SITE
